# ros_vrpn_client

./: .gitignore  CMakeLists.txt  README.md  README.md~  install_vrpn.sh  manifest.xml  package.xml
.github/workflows/: build.yml
cfg/: noisy_vicon.yaml
config/: asl_vicon.yaml
include/: bebop_odometry_estimator.h  vicon_estimator.h  vicon_estimator.hpp  vicon_odometry_estimator.h  vicon_odometry_estimator.hpp
launch/: asl_optitrack.launch  asl_vicon.launch  asl_vicon_auk.launch  asl_vicon_bluebird.launch  asl_vicon_l_frame.launch  bagfile_vicon.launch  demo.launch  multi_object.launch.py  retest_data.launch  roboa_vicon.launch.py
msg/: ViconEstimator.msg  rotationalEstimator.msg  viconEstimator.msg
src/: noisy_vicon.py  ros_vrpn_client.cpp  vicon_estimation_node.cpp  vicon_odometry_estimator.cpp  vicon_odometry_estimator.h
src/test/: CMakeLists.txt  test_vicon_estimator.cpp
src/test/include/: test_helper_library.h
src/wrapper/: vicon_odometry_estimator.cpp
viz/: tf_and_grid.vcg
