<?xml version="1.0"?>
<package format="2">
  <name>ros_vrpn_client</name>
  <version>0.0.0</version>
  <description>
     ROS node which is a client for Virtual Reality Peripheral
     Networks and publishes a TF frame and TransformStamped for
     tracked bodies.

     Tested with the Optitrak motion capture system from NaturalPoint.
  </description>
  <url></url>
  <author>Advait Jain, Chi-Hung King, Advisor: Prof. Charlie Kemp, Lab: Healthcare Robotics Lab at Georgia Tech</author>
  <maintainer email="pascal.gohl@mavt.ethz.ch">Pascal Gohl</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vrpn_catkin</depend>
  <depend>cmake_modules</depend>
  <depend>message_runtime</depend>
  <depend>eigen_conversions</depend>
  <depend>glog_catkin</depend>

</package>
