if (CATKIN_ENABLE_TESTING)
  catkin_add_gtest(test_vicon_estimator test_vicon_estimator.cpp)
  cs_add_library(test_helper_library library/test_helper_library.cpp)
  include_directories(include)
  target_link_libraries(test_vicon_estimator ${catkin_LIBRARIES} vicon_estimator test_helper_library)
  SET_TARGET_PROPERTIES(test_vicon_estimator PROPERTIES COMPILE_FLAGS "-std=c++11")
endif()